--- a/style.scss
+++ b/style.scss
@@ -102,7 +102,7 @@
                 font-weight: 500;
 
                 &:hover {
-                    background-color: var(--nutral-Verydarkblue);
+                    background-color: hsl(158, 37%, 24%);
                     font-weight: 700;
                 }
             }
